# covid19-ml

./: .gitignore  README.md  model_config.yaml  pyproject.toml  requirements.txt
src/: augment.py  datamodules.py  datasets.py  learning_loop.py  losses.py  metrics.py  model_results.py  models.py  modules.py  optimizers.py  qualitative.py  results_analysis.py  to_tensor.py  types_config.py  types_ml.py  visualizations.py
src/covid19_ml/: augment.py  datamodules.py  datasets.py  learning_loop.py  model_results.py  models.py  modules.py  optimizers.py  results_analysis.py  to_tensor.py  visualizations.py
tests/: fixtures.py  test_datamodules.py  test_dataset.py  test_learning_loop.py  test_models.py  test_modules.py  test_qualitative.py  test_results_analysis.py  test_to_tensor.py  test_visualizations.py
tests/test_data/: test.parquet
