[build-system]
requires = ["setuptools>=68.1.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covid19-ml"
version = "0.1.0"
description = "Machine learning model for COVID-19 epidemiological forecasting"
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = {text = "MIT"}
authors = [
    {name = "Jean-David Therrien", email = "jeandavidt@gmail.com"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning==2.0.8",
    "numpy==1.24.2",
    "pandas==2.2",
    "scipy==1.10.1",
    "matplotlib==3.7.0",
    "seaborn==0.12.2",
    "plotly==5.13.1",
    "ipykernel>=6.21.2",
    "pyarrow>=11.0.0",
    "nbformat>=5.7.3",
    "comet-ml>=3.0.0",
    "python-dotenv>=1.0.0",
    "easydict>=1.10",
    "pyyaml>=6.0",
    "pydantic>=1.10.6",
    "tsaug>=0.2.1",
    "scikit-learn>=1.2.2",
    "optuna>=3.2.0",
    "imbalanced-learn>=0.11.0",
    "statsmodels>=0.14.0",
    "pytorch-forecasting>=1.0.0",
    "tensorboard>=2.14.1",
    "rpy2>=3.5.14",
    "dash>=2.14.1",
    "ipywidgets>=8.1.1",
    "openpyxl>=3.1.2",
    "meteostat>=1.6.7",
    "salib>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pre-commit>=3.5.0",
    "types-pyyaml>=6.0.12.9",
    "optuna-dashboard>=0.10.1",
]

[project.urls]
"Homepage" = "https://github.com/modelEAU/covid19-ml"
"Bug Tracker" = "https://github.com/modelEAU/covid19-ml/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["covid19_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "pytorch_lightning.*",
    "tsaug.*",
    "optuna.*",
    "comet_ml.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "dash.*",
    "rpy2.*",
    "meteostat.*",
    "salib.*",
]
ignore_missing_imports = true


[tool.uv.project]
tracked-files = ["requirements.txt"]